# awesome-templates

./: .gitignore
fastapi-apps/fastapi-agent-blueprint/: .claudeignore  .codexignore  .gitignore  .mcp.json  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  SUPPORT.md  alembic.ini  docker-compose.langfuse.yml  docker-compose.local.yml  docker-compose.yml  pyproject.toml  run_scheduler_local.py  run_server_local.py  run_worker_local.py
fastapi-apps/fastapi-agent-blueprint/.agents/shared/: harness-python.sh  harness_debug.py  work_ledger.py
fastapi-apps/fastapi-agent-blueprint/.antigravity/: gemini-extension.json  permissions.json  plugin.json
fastapi-apps/fastapi-agent-blueprint/.antigravity/hooks/: _shared.py  completion_gate.py  post-tool-format.py  pre-tool-security.py  session-start.py  stop-sync-reminder.py  user-prompt-submit.py  verify_first.py
fastapi-apps/fastapi-agent-blueprint/.antigravity/rules/: project-harness.md
fastapi-apps/fastapi-agent-blueprint/.claude/: settings.json
fastapi-apps/fastapi-agent-blueprint/.claude/hooks/: check-required-plugins.sh  completion_gate.py  post-tool-format.sh  post_tool_stage_gate.py  pre-tool-security.sh  pre-tool-stage-block.sh  pre_tool_security.py  pre_tool_stage_block.py  session-start-context.sh  stage-gate.sh  stop-sync-reminder.sh  user-prompt-submit.sh  user_prompt_submit.py  verify-first.sh  verify_first.py
fastapi-apps/fastapi-agent-blueprint/.claude/rules/: absolute-prohibitions.md  architecture-conventions.md  commands.md  project-overview.md  project-status.md
fastapi-apps/fastapi-agent-blueprint/.codex/: config.toml  hooks.json
fastapi-apps/fastapi-agent-blueprint/.codex/hooks/: _shared.py  completion_gate.py  post-tool-format.py  pre-tool-security.py  session-start.py  stop-sync-reminder.py  user-prompt-submit.py  verify_first.py
fastapi-apps/fastapi-agent-blueprint/.codex/rules/: fastapi-agent-blueprint.rules
fastapi-apps/fastapi-agent-blueprint/.gemini/: settings.json
fastapi-apps/fastapi-agent-blueprint/.github/: pull_request_template.md
fastapi-apps/fastapi-agent-blueprint/.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
fastapi-apps/fastapi-agent-blueprint/.github/workflows/: ci.yml  governor-footer-lint.yml
fastapi-apps/fastapi-agent-blueprint/_docker/: docker.Dockerfile
fastapi-apps/fastapi-agent-blueprint/_env/: local.env.example  quickstart.env.example
fastapi-apps/fastapi-agent-blueprint/docs/: README.ko.md  README.md  adoption.md  ai-development.ko.md  ai-development.md  canonical-demo.md  comparison.md  compatibility.md  frontend-handoff.md  quickstart.md  reference.md
fastapi-apps/fastapi-agent-blueprint/docs/history/: 003-response-request-pattern.md  004-dto-entity-responsibility.md  006-ddd-layered-architecture.md  007-di-container-and-app-separation.md  009-async-external-clients.md  011-3tier-hybrid-architecture.md  017-exception-handling-strategy.md  019-domain-auto-discovery.md  022-underscore-prefix-convention.md  037-pydanticai-agent-integration.md  039-pydantic-ai-embedder-transition.md  040-rag-as-reusable-pattern.md  041-vector-backends-consolidation.md  042-optional-infrastructure-di-pattern.md  043-responsibility-driven-refactor.md  045-hybrid-harness-target-architecture.md  046-otel-core-langfuse-recipe-prompt-domain-defer.md  047-governor-review-provenance-consolidation.md  048-independent-review-generalization.md  049-admin-identity-realm-separation.md  050-midtask-scope-expansion-gate.md  051-runtime-llm-guardrails.md  052-native-execution-ledger-and-execute-plan.md  053-shared-review-protocol.md  054-plan-execute-boundary-hard-gate.md  055-summary-finding-ledger.md  056-zero-downtime-migration-safety.md  README.md
fastapi-apps/fastapi-agent-blueprint/docs/operations/: observability-langfuse.md  observability-otel.md  performance-locust.md  rdb-migrations.md
fastapi-apps/fastapi-agent-blueprint/docs/security/: README.md
fastapi-apps/fastapi-agent-blueprint/docs/tutorial/: first-domain.md
fastapi-apps/fastapi-agent-blueprint/examples/: README.md
fastapi-apps/fastapi-agent-blueprint/examples/blog/: README.md
fastapi-apps/fastapi-agent-blueprint/migrations/: env.py  env_utils.py
fastapi-apps/fastapi-agent-blueprint/scripts/: create-langfuse-env.sh  demo-rag.sh  demo.sh  render-diagrams.sh
fastapi-apps/fastapi-agent-blueprint/tests/: conftest.py
fastapi-apps/fastapi-agent-blueprint/tools/: check_examples_copyflow.py  check_governor_footer.py  check_harness_hook_surface.py  check_language_policy.py  check_migration_safety.py  check_state_lifecycle.py  governor_state_doctor.py
(+1486 files in other folders)
